[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytwin"
version = "0.5.0"
description = "A python wrapper for Ansys Digital Twin components"
license = "MIT"
authors = ["ANSYS, Inc. <ansys.support@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.maintainers@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/ansys/pytwin"
documentation = "https://twin.docs.pyansys.com/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "pytwin", from = "src/ansys" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
importlib-metadata = {version = "^4.0", python = "<3.8"}
numpy = ">=1.14"
pandas = ">=1.3.2"
pywin32 = {version = ">=304", markers = "platform_system == 'Windows'"}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.pytwin"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra"
testpaths = [
    "tests",
]
