[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytwin"
version = "0.8.dev0"
description = "A python wrapper for Ansys Digital Twin components"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
readme = "README.rst"
requires-python = ">=3.10,<4"
repository = "https://github.com/ansys/pytwin"
documentation = "https://twin.docs.pyansys.com/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.3,<3",
    "pandas>=1.3.2",
    "pyvista>=0.37.0,<1",
    "tqdm>=4.45.0,<5",
    "pywin32>=304;platform_system == 'Windows'",
]

[project.optional-dependencies]
doc = [
    "ansys-dpf-core>=0.9.0",
    "ansys-fluent-core>=0.16.0",
    "ansys-fluent-visualization>=0.7.1",
    "ansys-mapdl-core>=0.65.0,<0.66.0",
    "ansys-sphinx-theme==1.0.11",
    "jupyter_sphinx==0.5.3",
    "matplotlib==3.7.1",
    "numpydoc==1.8.0",
    "sphinx==8.0.2",
    "sphinx-autodoc-typehints==1.25.2",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.15.0",
    "sphinx-notfound-page==1.0.0",
    "sphinxemoji==0.3.1"
]

test = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]

[tool.flit.module]
name = "ansys.pytwin"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.codespell]
ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"

[tool.coverage.run]
source = ["ansys.pytwin"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra"
testpaths = [
    "tests",
]
