[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytwin"
version = "0.9.2"
description = "A python wrapper for Ansys Digital Twin components"
license = "MIT"
authors = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
maintainers = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/ansys/pytwin"
documentation = "https://twin.docs.pyansys.com/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "pytwin", from = "src/ansys" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = ">=1.17"
pandas = ">=1.3.2"
tqdm = ">=4.45.0"
pywin32 = { version = ">=304", markers = "platform_system == 'Windows'" }

# Optional dependencies which are included in the 'extras' section.
pyvista = { version = ">=0.38.6", optional = true }

[tool.poetry.extras]
graphics = ["pyvista"]

[tool.poetry.group.graphics]
optional = true

[tool.poetry.group.graphics.dependencies]
pyvista = ">=0.38.6"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.0.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
ansys-fluent-core = "^0.30"
ansys-dpf-core = "^0.13.0"
ansys-fluent-visualization = "^0.19"
ansys-mapdl-core = {version = ">=0.68.5,<0.71.0", extras = ["graphics"]}
ansys-sphinx-theme = "^1.4.4"
jupyter_sphinx = "^0.5.3"
matplotlib = "^3.7.1"
numpydoc = ">=1.6.0"
Sphinx = ">=7.0.1,<9.0.0"
sphinx-autodoc-typehints = ">=1.25.2,<4.0.0"
sphinx-copybutton = "^0.5.0"
sphinx-gallery = ">=0.17,<0.20"
sphinx-notfound-page = "^1.0.0"
sphinxemoji = ">=0.2,<0.4"
pyaedt = ">=0.15,<0.17"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.codespell]
ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"

[tool.coverage.run]
source = ["ansys.pytwin"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra"
testpaths = [
    "tests",
]
